--- a/26瑞士银行卡.md
+++ b/26瑞士银行卡.md
@@ -1,5 +1,7 @@
 > [success] 本章作者：俞玥，范梦瑶，杨锦涛
 
+> [warning] 【学联提醒】*Debit储蓄卡可以正式汇款转账，但Prepaid/Credit卡不行。请避免将大量金额一次性充入Prepaid/Credit卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易。*
+
 #### **1. 实体银行**
 
 |          | UBS                                                                                                                                                                                                | PostFinance                                                                                                                                                              | ZKB                                                                                                                                            |
