--- a/找房租房.md
+++ b/找房租房.md
@@ -2,7 +2,7 @@
 
 > [success] 特别鸣谢：张家萌、陈庆瑄、彭雅莹、岳妮
 
-> [danger] **本章节维护中**
+> [danger] **本章节维护中，造成阅读不便敬请谅解。**
 
 > [info] *本章节合并了先前的”云找房“和”找房租房“章节*。
 
@@ -22,31 +22,19 @@
 ^
 
 ### **2. 租房时需要考虑的因素**
+#### **2.1 是否能够签署租房合同（能够“注册”）**
+##### **2.1.1 租房合同和住址申报的关系**
+所谓“注册”，即办理住址申报，是所有苏黎世居民的义务（具体可参考[25 住址申报（“户口”）](<25住址申报（“户口”）.md>)章节）。而租房合同是办理住址申报的必要条件，因此，租房时必须关注是否能够签署租房合同。只要有签署完成的租房合同，无论是Mietvertrag（直租合同）或Untermietvertrag（转租合同），都可以用来办理住址申报。
+一般，不能签署合同的房源，即不能用于住址申报的房源都是一个月以下的短租。如果租房时长在一个月及以上，无论直租还是转租，按惯例都需要签署租房合同。如果持有转租合同的，办理申报时需要一并携带转租合同和二房东的直租合同，且最好由二房东陪同办理。
 
-1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室申报住址）
-2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要付费承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手家具（微信群、本地二手平台、Facebook等，可直接谷歌搜索**second hand furniture zurich**），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要因为没有家具被劝退，自己置办家具也是不错的选择
-3. 如果是私人房东，则尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。如果是不动产管理公司（如Livit）/正规中介公司（如Intermezzo）/大型住房合作社（如WOKO，JUWO，WFSS），则有可能提前线上签合同，落地后再领取钥匙
-4. 签完合同后，房东或物业管理员应该和你一同确认房间现有破损状况，记录在检查单上，并由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
-5. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
-6. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
-
-#### **2.1 租房合同**
-
-总的来说，“注册地址”一词是很久以前坊间以讹传讹冒出来的词汇，其**不对应任何官方条文概念**。官方要求请见“[25 住址申报（“户口”）](25住址申报（“户口”）.md)”篇。
-
-^
-
-#### **租房合同与申报住址的关系**
-
-只要能签租房合同，无论是Mietvertrag或Untermietvertrag（原始合同或转租合同），都可以申报地址。不能申报地址的租房，就是不开合同的租房，一般是期限很短的租房，如一个星期。
-
-如果租房时长在一个月及以上，无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去人口登记办公室进行住址申报。请注意如果是转租，需要把转租合同和二房东手里的原始合同一起带去人口登记办公室，且最好二房东一起陪同前往申报。
+##### **2.1.2 什么是”注册地址“**
+总的来说，“注册地址”一词是很久以前坊间以讹传讹冒出来的词汇，其**不对应任何官方条文概念**，实际含义可理解为”向政府申报的住址“。
 
 > 转租合同模板（由[瑞士租房者协会](https://www.mieterverband.ch/)提供）:attachment[2019\_Untermietvertrag-Wohnraeume\_mp\_interaktiv.pdf]{src=".topwrite/assets/2019_Untermietvertrag-Wohnraeume_mp_interaktiv.pdf" size="154.85 kB"}
 
 ^
 
-#### **持转租合同可否申报住址**？（同一个地址可否申报多人？）
+**持转租合同可否申报住址**？（同一个地址可否申报多人？）
 
 可以且必须。
 
@@ -64,9 +52,24 @@
 
 ^
 
-#### **什么是收“注册”地址/出“注册”地址**？
+**什么是收“注册”地址/出“注册”地址**？
 
 所谓收“注册”地址/出“注册”地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去申报住址。学联非常不推荐买卖“注册”地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和人口登记办公室的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了。
+
+
+#### **2.2 房源类型**
+#### **2.3 家具相关**
+
+
+2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要付费承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手家具（微信群、本地二手平台、Facebook等，可直接谷歌搜索**second hand furniture zurich**），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要因为没有家具被劝退，自己置办家具也是不错的选择
+3. 如果是私人房东，则尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。如果是不动产管理公司（如Livit）/正规中介公司（如Intermezzo）/大型住房合作社（如WOKO，JUWO，WFSS），则有可能提前线上签合同，落地后再领取钥匙
+4. 签完合同后，房东或物业管理员应该和你一同确认房间现有破损状况，记录在检查单上，并由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
+5. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
+6. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
+
+
+
+
 
 #### **2.2 房源地点**
 
