Update 00欢迎页.md, 04结语&学联服务.md, 10申请签证.md, 12国内手机及电话卡.md, 12国内银行卡.md, SUMMARY.md, 家具的置办.md, 居住和日常出行相关.md, 找房租房.md, 行前材料发放.md Delete 15新生材料c-o寄存.md, 24找房租房.md, 36居住相关.md

--- a/10申请签证.md
+++ b/10申请签证.md
@@ -10,7 +10,7 @@
 > * 缴费相关
 > * 所递交材料骑缝章相关（视实际情况而定）
 
-#### **1. 需要申请签证的人员**
+### **1. 需要申请签证的人员**
 
 根据瑞士相关法律法规，以下人员赴瑞留学**不需要**办理签证：
 
@@ -27,7 +27,7 @@
 
 ^
 
-#### **2. 申请签证的时间、地点及预约方式**
+### **2. 申请签证的时间、地点及预约方式**
 **关于申签时间：**
 * 对于**本科与硕士**学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
 * 对于博士学生，因需要的签证类型为工作签，必须由学校代为申请（实际操作上一般由组内秘书代为申请）。
@@ -38,7 +38,7 @@
 
 ^
 
-#### **3. 申请材料**
+### **3. 申请材料**
 > [danger] 【学联提醒】不要用旅游签证入境瑞士留学！
 
 关于申请签证所需材料，请详细阅读所在学校给出的申签材料清单（见下文），并**以学校官网信息作为申签指导**。
@@ -70,19 +70,19 @@
 
 ^
 
-#### **4. 相关咨询渠道**
+### **4. 相关咨询渠道**
 
-##### **1) 参考校方网站 / 向校方邮件咨询**
+#### **4.1 参考校方网站 / 向校方邮件咨询**
 * [ETH International Student Office](https://ethz.ch/students/en/studies/international-students.html)
 * [UZH for International Students and Scholars](https://www.internationals.uzh.ch/en.html)
 
 一般，校方的响应速度较快。
-##### **2) 向递签的使领馆邮件/电话咨询**
+#### **4.2 向递签的使领馆邮件/电话咨询**
 
 * [瑞士驻华使领馆联系方式汇总](https://www.eda.admin.ch/countries/china/en/home/representations.html)
   *点击对应使领馆可查看该馆针对签证相关问题的**咨询邮箱及电话热线**。如选择电话咨询，请务必注意其可用时间。*
 
-##### **3) 咨询苏黎世州移民局**
+#### **4.3 咨询苏黎世州移民局**
 
 * [苏黎世州移民局联系表格](https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt-ohne-zhnr.html)
 * 苏黎世州移民局服务热线（可通过Skype等拨打）：+41 43 259 88 00
@@ -91,7 +91,7 @@
 
 ^
 
-#### **5. 补交材料**
+### **5. 补交材料**
 
 > [warning] *该部分内容汇总自群聊，其中关于”收信流程“和”原件补交流程“的部分需要额外核实*。
 
