--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -4,16 +4,16 @@
 
 ^
 
-:-: 苏黎世中国学生学者联合会
+:-: **苏黎世中国学生学者联合会**
 
-:-: Association of Chinese Students and Scholars in Zurich
+:-: ***Association of Chinese Students and Scholars in Zurich***
 
-:-: Verein der Chinesischen Studierenden und Gelehrten in Zürich
+:-: ***Verein der Chinesischen Studierenden und Gelehrten in Zürich***
 
 ^
-
+***
 > [warning] :-: 根据[《中华人民共和国著作权法》](http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml#)第八条与第十四条
-> 本文档著作权由内容贡献者共同享有，并由苏黎世学联协调管理
+> 本《指南》著作权由内容贡献者共同享有，并由苏黎世学联协调管理
 > **未经苏黎世学联授权，严禁以任何形式转载，违者必究**
 
 > [success] :-: 2023年4月29日新生在线答疑会回放[请点击此](https://www.bilibili.com/video/BV18m4y1176R/?share_source=copy_web\&vd_source=802461966f51c0cf1ab48c9114efb719)
