--- a/12国内手机及电话卡.md
+++ b/12国内手机及电话卡.md
@@ -4,7 +4,7 @@
 
 > [info] 【学联提醒】*为确保在瑞士亦可接发短信及接打电话，建议**提前设置最低月费保号套餐并开通国际漫游**。*
 
-#### **1. 最低月费保号套餐**
+### **1. 最低月费保号套餐**
 
 目前，国内三大运营商最低的月租套餐是：
 
@@ -21,7 +21,7 @@
 
 ^
 
-#### **2. 国际漫游**
+### **2. 国际漫游**
 
 三大运营商漫游业务均至瑞士，开通国际漫游业务可通过人工客服或者点击相关公众号服务开通，具体资费情况（如电话，短信，流量，日收费上限等）可查看官方公众号及网页。
 
@@ -38,29 +38,23 @@
 
 ^
 
-#### **3. 其它全球上网服务**
+### **3. 其它境外上网服务**
 
-小米手机提供的全球上网服务 <https://www.mi.com/service/consult/Mi%20roaming>
-
-华为手机天际通全球流量，可选择绑定手机SIM卡或天际通套餐和卡券等<https://consumer.huawei.com/cn/mobileservices/>
-
-^
-
-#### **4. 瑞士临时旅游流量卡（淘宝等**）
-
-淘宝上面也有很多瑞士或欧洲旅游上网卡（实体流量卡），流量不等，大家按需购买即可。
+- 小米手机[全球上网服务](<https://www.mi.com/service/consult/Mi%20roaming>)
+- 华为手机[天际通全球流量](<https://consumer.huawei.com/cn/mobileservices/>)，可选择绑定手机SIM卡或天际通套餐和卡券等
+- 临时实体流量卡（可通过淘宝等平台按需购买）
 
 ^
 
-#### **5. 苹果手机换区**
+### **4. 关于苹果手机的App Store区域**
 
-使用苹果手机的同学请在抵达瑞士前**将苹果手机及Apple Store区域切换到瑞士**。比如大家在瑞士日常交通中使用的[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)和[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等在中国区域的Apple Store中是无法搜到的。
-Apple Setting：Setting -> Language& Region -> Region Apple Store：Apple Store -> Profile Picture(Up Right) -> Profile ID (Apple ID) -> Country/ Region&#x20;
-
-苹果手机型号不同，以上设置可能略微有差别。
+对于使用苹果手机人员，抵达瑞士前需**将苹果手机及App Store区域切换到瑞士**，以便能够在App Store中搜索并下载瑞士常用的各类应用（如[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)、[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等）。
+设置步骤（根据手机具体型号可能略微有所不同，仅供参考）：
+Apple Setting：Setting → Language & Region → Region Apple Store：Apple Store → Profile Picture(Up Right) → Profile ID (Apple ID) → Country / Region
 
 ^
 
-#### **6. 安卓手机谷歌框架**
+### **5. 关于安卓手机的谷歌框架**
+> [danger] 【学联提醒】*受国际局势影响，部分新款的华为手机可能无法使用任何谷歌服务，此时建议更换其他手机以确保在瑞士能够下载并使用相关软件。*
 
-使用安卓手机的同学请在抵达瑞士前**开启安卓手机内的谷歌基础服务**，以便于通过谷歌Play Store安装瑞士生活常用的APP（如[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)和[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等）。常说的谷歌三件套（google service framework，google play service，google play store），大家最好在国内已安装好。
+对于使用安卓手机人员，因瑞士许多手机软件均依赖谷歌框架运行，入境瑞士前需**开启安卓手机内的谷歌基础服务**，以便于通过Google Play Store安装瑞士生活常用的APP（如[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)、[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等）并运行之。为此，最好在国内即安装好所谓的“谷歌三件套”（Google Service Framework、Google Play Service、Google Play Store）。
