--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,8 +1,9 @@
 > [success] 本章作者：杜超瑜、杨锦涛、赵逸飞
 
-> [danger] 【学联提醒】*对于“申请签证”这件可以一票决定未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，包含[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)等。以下仅为针对它们的简单总结与梳理，我们强烈建议**直接阅读相关原文并获取信息**！*
+> [danger] 【学联提醒】*对于“申请签证”这件可以一票决定未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源***，*包含*[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)*等。以下仅为针对它们的简单总结与梳理，我们强烈建议**直接阅读相关原文并获取信息***！
 
->  [warning] 本章节后期考虑简要添加以下内容（如必要，部分信息将请新生提供）：
+> [warning] 本章节后期考虑简要添加以下内容（如必要，部分信息将请新生提供）：
+>
 > * 签证更改（如姓名写错，希望更改最早准许入境日期等） 的可能性及对接方
 > * 签证效力知识普及（以短句+外链形式）
 > * 《授权信》相关
@@ -23,49 +24,62 @@
 
 ^
 
-> [info] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员**，同时**仅针对就读苏黎世州高等院校人员**。如在中国、瑞士以外的第三国办理签证的，或是就读瑞士中学的，或是就读苏黎世州以外的高等院校的，流程和所需材料可能有所不同，请以当地移民局、瑞士驻当地使领馆公告及校方要求为准。*
+> [info] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员***，*同时**仅针对就读苏黎世州高等院校人员***。*如在中国、瑞士以外的第三国办理签证的，或是就读瑞士中学的，或是就读苏黎世州以外的高等院校的，流程和所需材料可能有所不同，请以当地移民局、瑞士驻当地使领馆公告及校方要求为准*。
 
 ^
 
 ### **2. 申请签证的时间、地点及预约方式**
-**关于申签时间：**
+
+**关于申签时间**：
+
 * 对于**本科与硕士**学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
 * 对于博士学生，因需要的签证类型为工作签，必须由学校代为申请（实际操作上一般由组内秘书代为申请）。
 
-**关于申签地点及预约方式：**
-瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)**。
+**关于申签地点及预约方式**：
+瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见**[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)。
 使领馆收到申请材料（具体见下文）后，会将其转交给苏黎世州移民局，由移民局负责审核签证材料并决定是否发放签证。即：最终决定权在苏黎世州移民局，使领馆仅负责转交材料并在移民局批准后通知前往贴签。苏黎世州移民局对于签证申请的相关政策法规可参见：[Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)
 
 ^
 
 ### **3. 申请材料**
+
 > [danger] 【学联提醒】不要用旅游签证入境瑞士留学！
 
 关于申请签证所需材料，请详细阅读所在学校给出的申签材料清单（见下文），并**以学校官网信息作为申签指导**。
-- [ETH申请材料指导清单](<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>)
-*该清单中内容由ETH与苏黎世州移民局合作编写，**满足苏黎世州移民局官方最新要求**。请注意，**本科生和硕士生所需递交的材料有所不同***。
-- [UZH申请材料指导清单](<https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>)
-*本页提供的信息仅供参考，不保证完全准确。这些信息所依据的法规自上次审查以来可能已经发生变化。有关具有法律约束力的信息，请查阅苏黎世州移民局的网站或联系当地的瑞士使领馆。*
+
+* [ETH申请材料指导清单](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)
+  *该清单中内容由ETH与苏黎世州移民局合作编写*，***满足苏黎世州移民局官方最新要求***。*请注意*，***本科生和硕士生所需递交的材料有所不同***。
+* [UZH申请材料指导清单](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)
+  *本页提供的信息仅供参考，不保证完全准确。这些信息所依据的法规自上次审查以来可能已经发生变化。有关具有法律约束力的信息，请查阅苏黎世州移民局的网站或联系当地的瑞士使领馆*。
 
 一般，需要递交的材料包括但不限于：
 
-* [申根D类签证申请表](<https://www.sem.admin.ch/sem/en/home/themen/einreise/visumantragsformular.html>)（National type D visa application form）
+* [申根D类签证申请表](https://www.sem.admin.ch/sem/en/home/themen/einreise/visumantragsformular.html)（National type D visa application form）
+
 * 护照（注意护照有效期及剩余空白页数；如一年内到期的或剩余空白页数不足2页的，建议先申领新护照）
+
 * 护照照片（背景及尺寸以使领馆要求为准）
+
 * 学校的录取通知书/申请确认信（ETH: Anmeldebestätigung / Confirmation of Application）
+
 * 简历（须注明语言水平）
+
 * 本科毕业证（若毕业证语言非英语或德语，则须**翻译成德语并公证**；一般需要较长时间，请提前安排）
+
 * 动机信（Motivation Letter，简短）
+
 * 学习计划（Study Plan，简短）
+
 * 毕业计划（Future Plan，简短）
+
 * ~~毕业离境承诺书~~
-*根据苏黎世州移民局<Weisung: :attachment[Aus- und Weiterbildung.pdf]{src=".topwrite/assets/Aus- und Weiterbildung.pdf" size="445.17 kB"}> 的2.4.3.2. Wiederausreiseverpflichtung条款，来苏黎世州接受高等教育（Hochschule）的非申根区人员**不需要提交书面的毕业离境承诺书**，因为其毕业后有可能会留在瑞士工作。*
+  *根据苏黎世州移民局\<Weisung*: :attachment[*Aus- und Weiterbildung.pdf*]{src=".topwrite/assets/Aus- und Weiterbildung.pdf" size="445.17 kB"}> *的2.4.3.2. Wiederausreiseverpflichtung条款，来苏黎世州接受高等教育（Hochschule）的非申根区人员**不需要提交书面的毕业离境承诺书***，*因为其毕业后有可能会留在瑞士工作*。
 
 * 银行存款证明
-*该笔存款须存入**自己名下**（而非父母名下），且须存入**苏黎世州移民局[指定的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)** 中。截至2023年7月，中国银行、中国建设银行和中国工商银行均在列。
-苏黎世州移民局不要求冻结该笔存款，但各使领馆可能有该项要求，且要求变动极为频繁。因此，在换汇冻结前请先邮件咨询对应使领馆（见下文），并关注新生群内相关动态。学联也欢迎大家随时在群中分享自己的经验。*
+  *该笔存款须存入**自己名下***（*而非父母名下），且须存入**苏黎世州移民局***[指定的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de) *中。截至2023年7月，中国银行、中国建设银行和中国工商银行均在列*。
+  *苏黎世州移民局不要求冻结该笔存款，但各使领馆可能有该项要求，且要求变动极为频繁。因此，在换汇冻结前请先邮件咨询对应使领馆（见下文），并关注新生群内相关动态。学联也欢迎大家随时在群中分享自己的经验*。
 
-此外，尽管使领馆只负责向苏黎世州移民局转交材料，但为避免不必要的误会和麻烦，所提交材料在满足上述移民局要求以外还须**满足[瑞士驻华使领馆的材料要求](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)**。鉴于使领馆和移民局的要求不完全一致，在此需要**取两者之并集**，将所有相关材料递交给使领馆以确保签证办理顺利。
+此外，尽管使领馆只负责向苏黎世州移民局转交材料，但为避免不必要的误会和麻烦，所提交材料在满足上述移民局要求以外还须**满足**[瑞士驻华使领馆的材料要求](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)。鉴于使领馆和移民局的要求不完全一致，在此需要**取两者之并集**，将所有相关材料递交给使领馆以确保签证办理顺利。
 ![](.topwrite/assets/image_1682753598509.png =406)
 
 ^
@@ -73,14 +87,16 @@
 ### **4. 相关咨询渠道**
 
 #### **4.1 参考校方网站 / 向校方邮件咨询**
+
 * [ETH International Student Office](https://ethz.ch/students/en/studies/international-students.html)
 * [UZH for International Students and Scholars](https://www.internationals.uzh.ch/en.html)
 
 一般，校方的响应速度较快。
+
 #### **4.2 向递签的使领馆邮件/电话咨询**
 
 * [瑞士驻华使领馆联系方式汇总](https://www.eda.admin.ch/countries/china/en/home/representations.html)
-  *点击对应使领馆可查看该馆针对签证相关问题的**咨询邮箱及电话热线**。如选择电话咨询，请务必注意其可用时间。*
+  *点击对应使领馆可查看该馆针对签证相关问题的**咨询邮箱及电话热线***。*如选择电话咨询，请务必注意其可用时间*。
 
 #### **4.3 咨询苏黎世州移民局**
 
