--- a/找房租房.md
+++ b/找房租房.md
@@ -29,7 +29,7 @@
 
 ^
 
-### **2. 租房时需要考虑的因素**
+### **2. 租房考虑因素**
 
 #### **2.1 能否签署租房合同（能否“注册**”）
 
@@ -41,7 +41,7 @@
 
 A（二房东）应该**在转租开始的14天内完成**[第三方申报](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)（可[在线完成](https://www.drittmeldung.ch/ui/#/home)），这是**A作为二房东必须履行的义务**。与此同时，合同起始日期14天内，**B亦应该前往所在地的人口登记办公室申报住址**。请注意，这是两件**并行但独立**的事情，需要A和B分别完成各自的义务。
 
-##### **2.1.2 什么是”注册地址**“
+##### **2.1.2 传说中的”注册地址**“**是什么**
 
 总的来说，“注册地址”一词是很久以前坊间以讹传讹冒出来的词汇，其**不对应任何官方条文概念**，实际官方含义可理解为”向人口登记办公室申报的住址“。
 
