--- a/找房租房.md
+++ b/找房租房.md
@@ -39,7 +39,7 @@
 一般，不能签署租房合同的房源，即不能用于住址申报的房源都是一个月以下的短租。如果租房时长在一个月及以上，无论直租还是转租，按惯例都需要签署租房合同。如果是持有转租合同，办理申报时需要一并携带转租合同和二房东的直租合同，且最好由二房东陪同前往办理。根据[苏黎世市官方政策](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)：
 如果A（二房东）决定**转租**房间给B（转租租客）无论是[外出期间的临时转租](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html)还是长期转租，A都应与B签署转租合同（模板见:attachment[2019\_Untermietvertrag-Wohnraeume\_mp\_interaktiv.pdf]，由[瑞士租房者协会](https://www.mieterverband.ch/)提供）。
 
-A（二房东）应该**在转租开始的14天内完成**[第三方申报](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)（可[在线完成](https://www.drittmeldung.ch/ui/#/home)），这是**A作为二房东必须履行的义务**。与此同时，合同起始日期14天内，**B亦应该前往所在地的人口登记办公室申报住址**。请注意，这是两件**并行但独立**的事情，需要A和B分别完成各自的义务。
+A（二房东）应该**在转租开始的14天内完成**[第三方申报](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)（可[在线完成](https://www.drittmeldung.ch/ui/#/home)），这是**A作为二房东必须履行的义务**。与此同时，在合同起始日期（已在瑞士）或落地后（还没来瑞士）14天内，**B亦应该前往所在地的人口登记办公室申报住址**。请注意，这是两件**并行但独立**的事情，需要A和B分别完成各自的义务。
 
 ##### **2.1.2 传说中的”注册地址**“**是什么**
 
