--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -69,7 +69,7 @@
 
 **套餐对比**：
 
-![](.topwrite/assets/image_1682196432216.png)
+![](.topwrite/assets/image.imageformat.lightbox.358382199.jpg)
 
 **各产品具体报价可在ETH相关网站查看**：
 
