Update 12国内手机及电话卡.md, 12国内银行卡.md, 13赴瑞机票.md

--- a/12国内手机及电话卡.md
+++ b/12国内手机及电话卡.md
@@ -1,15 +1,15 @@
 > [success] 本章作者：李圆
 
-> [warning] *本章节仅介绍国内设备和SIM卡在国外的使用，关于瑞士本地SIM卡请参考[22 瑞士电话卡](<22prepaid电话卡.md>)章节。*
+> [warning] *本章节仅介绍国内设备和SIM卡在国外的使用，关于瑞士本地SIM卡请参考*[22 瑞士电话卡](22prepaid电话卡.md)*章节*。
 
-> [info] 【学联提醒】*为确保在瑞士亦可接发短信及接打电话，建议**提前设置最低月费保号套餐并开通国际漫游**。*
+> [info] 【学联提醒】*为确保在瑞士亦可接发短信及接打电话，建议**提前设置最低月费保号套餐并开通国际漫游***。
 
 ### **1. 最低月费保号套餐**
 
 目前，国内三大运营商最低的月租套餐是：
 
 * 中国移动：8元套餐
-*分为语音版和流量版，部分地区只有不包括通话流量的8元飞享套餐*
+  *分为语音版和流量版，部分地区只有不包括通话流量的8元飞享套餐*
 * 中国联通：联通8元流量王
 * 中国电信：电信5元无忧卡
 
@@ -26,23 +26,23 @@
 三大运营商漫游业务均至瑞士，开通国际漫游业务可通过人工客服或者点击相关公众号服务开通，具体资费情况（如电话，短信，流量，日收费上限等）可查看官方公众号及网页。
 
 * 中国移动（境外国漫服务专线：+86 138 0010 0186  或 +86 10086）：
-漫游公众号：中国移动国际漫游（开通漫游，多种流量及长途业务办理，业务资费等）
+  漫游公众号：中国移动国际漫游（开通漫游，多种流量及长途业务办理，业务资费等）
 
 * 中国联通：
-漫游公众号：中国联通（点击链接到网上营业厅，左侧栏国际漫游）
-境外国漫服务专线：+86 18618610010
+  漫游公众号：中国联通（点击链接到网上营业厅，左侧栏国际漫游）
+  境外国漫服务专线：+86 18618610010
 
 * 中国电信：
-漫游公众号：中国电信国际及港澳台漫游（开通漫游，流量包办理，资费查询等）
-境外国漫服务专线：+86 18918910000
+  漫游公众号：中国电信国际及港澳台漫游（开通漫游，流量包办理，资费查询等）
+  境外国漫服务专线：+86 18918910000
 
 ^
 
 ### **3. 其它境外上网服务**
 
-- 小米手机[全球上网服务](<https://www.mi.com/service/consult/Mi%20roaming>)
-- 华为手机[天际通全球流量](<https://consumer.huawei.com/cn/mobileservices/>)，可选择绑定手机SIM卡或天际通套餐和卡券等
-- 临时实体流量卡（可通过淘宝等平台按需购买）
+* 小米手机[全球上网服务](https://www.mi.com/service/consult/Mi%20roaming)
+* 华为手机[天际通全球流量](https://consumer.huawei.com/cn/mobileservices/)，可选择绑定手机SIM卡或天际通套餐和卡券等
+* 临时实体流量卡（可通过淘宝等平台按需购买）
 
 ^
 
@@ -55,6 +55,7 @@ Apple Setting：Setting → Language & Region → Region Apple Store：Apple Sto
 ^
 
 ### **5. 关于安卓手机的谷歌框架**
-> [danger] 【学联提醒】*受国际局势影响，部分新款的华为手机可能无法使用任何谷歌服务，此时建议更换其他手机以确保在瑞士能够下载并使用相关软件。*
+
+> [danger] 【学联提醒】*受国际局势影响，部分新款的华为手机可能无法使用任何谷歌服务，此时建议更换其他手机以确保在瑞士能够下载并使用相关软件*。
 
 对于使用安卓手机人员，因瑞士许多手机软件均依赖谷歌框架运行，入境瑞士前需**开启安卓手机内的谷歌基础服务**，以便于通过Google Play Store安装瑞士生活常用的APP（如[SBB Mobile](https://www.sbb.ch/de/fahrplan/mobile-fahrplaene/sbb-mobile.html)、[ZVV-App](https://www.zvv.ch/zvv/de/service/apps/zvv-app.html)等）并运行之。为此，最好在国内即安装好所谓的“谷歌三件套”（Google Service Framework、Google Play Service、Google Play Store）。
