--- a/12国内银行卡.md
+++ b/12国内银行卡.md
@@ -1,10 +1,10 @@
 > [success] 本章作者：李圆
 
-> [info] 【学联提醒】*目前，瑞士境内所有ATM终端及近95%商户均支持银联卡。此外，鉴于磁条卡时长无法使用，应尽量办理芯片卡。*
+> [info] 【学联提醒】*目前，瑞士境内所有ATM终端及近95%商户均支持银联卡。此外，鉴于磁条卡时长无法使用，应尽量办理芯片卡*。
 
-### **1. [中国银行长城留学借记卡](<https://www.boc.cn/bcservice/bc2/201704/t20170426_9329829.html>)**
+### **1**. [中国银行长城留学借记卡](https://www.boc.cn/bcservice/bc2/201704/t20170426_9329829.html)
 
-**优点：**
+**优点**：
 
 * 取现便利：使用该卡在中国银行合作银行的ATM机上取现瑞士法郎，每月有一次机会免费取现。如UBS，Credit Suisse，PostFinance, Raiffeisen bank, ZKB, Luzerner Kantonalbank, Valiant Bank 等ATM机。
 * 免年费：不需要支付任何年费，降低了留学生的使用成本；
@@ -12,7 +12,7 @@
 * 跨境转账方便：留学生可以通过该卡方便地进行跨境汇款和转账，方便快捷；
 * 账户管理灵活：持卡人可以通过手机银行、网上银行等渠道方便地管理卡账户，包括查询余额、交易明细等。
 
-**缺点：**
+**缺点**：
 
 * 无信用额度：中国银行长城留学借记卡是一张借记卡，没有信用额度；
 * 限制：此芯片卡有些店不支持使用。另需注意交易限额、取现限额等限制；
@@ -20,9 +20,9 @@
 
 ^
 
-### **2. [招商银行VISA全币信用卡](<https://market.cmbchina.com/ccard/quanbika/>)**
+### **2**. [招商银行VISA全币信用卡](https://market.cmbchina.com/ccard/quanbika/)
 
-**优点：**
+**优点**：
 
 * 全币种覆盖：招商银行全币种信用卡可以适用于各种场景，可以方便的满足不同消费需求。
 * 多种福利：招商银行全币种信用卡有丰富的福利，例如优惠活动、积分兑换等，可以为持卡人提供更多的价值。
@@ -31,7 +31,7 @@
 * 信用卡年费：免收年费。
 * 目前暂未经历过此芯片卡不能使用的情况。
 
-**缺点：**
+**缺点**：
 
 * 信用卡利息：如果持卡人没有及时还款或者透支，招商银行全币种信用卡的利息比较高，需要持卡人承担一定的成本；
 * 额外手续费：在一些特殊情况下，例如提现、透支等，招商银行全币种信用卡会收取额外的手续费，需要持卡人注意避免。
