--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -1,6 +1,6 @@
 > [success] 本章作者：赵逸飞
 
-> [info] 【学联提醒】*如想寻找同一航班伙伴，请查看[学联论坛2023航班“找伴儿”贴](https://forum.acssz.org/d/1005)；如需要接机服务，请在[学联论坛2023接机供求贴](https://forum.acssz.org/d/950)内发布需求，或直接联系帖子中提供接机的同学。*
+> [info] 【学联提醒】*如想寻找同一航班伙伴，请查看*[学联论坛2023航班“找伴儿”贴](https://forum.acssz.org/d/1005)；*如需要接机服务，请在*[学联论坛2023接机供求贴](https://forum.acssz.org/d/950)*内发布需求，或直接联系帖子中提供接机的同学*。
 
 ### **1. 关于安排赴瑞行程、购买赴瑞机票的一些tips/注意事项**
 
@@ -44,8 +44,8 @@
 
 #### **1.8 注意出票航司、承运航司的区别**
 
-* **出票航司：** 你的客票上所列明的“出票航司”（Issuer/Issuing Airline），单张客票只能有一个出票航司
-* **承运航司（Operator/Operating Airline）：** 实际执行你所乘坐航班的航司，单张客票涉及多个航班的，每个航班的承运航司可以不同
+* **出票航司**： 你的客票上所列明的“出票航司”（Issuer/Issuing Airline），单张客票只能有一个出票航司
+* **承运航司（Operator/Operating Airline**）： 实际执行你所乘坐航班的航司，单张客票涉及多个航班的，每个航班的承运航司可以不同
 * 选座、特殊餐食预定（如有）等须在**承运航司官网**进行；值机须在**承运航司柜台**办理
 
 #### **1.9 机票查询**
@@ -85,7 +85,6 @@
 根据现有政策，出境人员仍需**通过“海关旅客指尖服务”微信小程序进行出境健康申报**，申报须在**出境前24小时内进行**。我们建议大家在出境航班座位号确定后即进行申报，以节约在机场的时间；座位号因故无法确定的，亦可在机场现场申报。申报后会获得二维码，此码在海关处必须出示以备查验。
 
 ^
-
 
 ### **2. 赴瑞可能路线及其特点**
 
@@ -232,7 +231,6 @@
 此外，如果选择搭乘客船经香港赤鱲角HKG中转的，可在内地码头直接办理值机手续及行李托运，具体请参考[香港赤鱲角机场发布的有关信息](https://www.hongkongairport.com/sc/transport/mainland-connection/airline-check-in-at-prd-and-macao.page#1)。
 
 ^
-
 
 ### **3. 参考**
 
