--- a/找房租房.md
+++ b/找房租房.md
@@ -51,7 +51,7 @@ A（二房东）应该**在转租开始的14天内完成**[第三方申报](http
 
 ##### **2.1.4 关于“收/出‘注册’地址**”
 
-所谓收“注册”地址/出“注册”地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去申报住址。学联非常不推荐买卖“注册”地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和人口登记办公室的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了。
+所谓收“注册”地址/出“注册”地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去申报住址。**学联非常不推荐买卖“注册”地址（假合同）**，这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和人口登记办公室的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了。
 
 #### **2.2 房源类型**
 
